@@ -1,6 +1,7 @@
 linux (3.16.51-3+deb8u2) UNRELEASED; urgency=medium
 
   * abiupdate.py: Use current config instead of downloading previous config
+  * abiupdate.py: Add support for security mirrors
 
  -- Ben Hutchings <ben@decadent.org.uk>  Fri, 12 Jan 2018 02:40:09 +0000
 
